[package]
name = "iitk-traveller-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
regex="1"
lazy_static = "1.4.0"
text_io = "0.1.12"
serde_json = "1.0.91"
log = "0.4"
console_log = "0.2"
yew = {version = "0.20.0", features = ["csr"]}